crates/validation/tests/snapshots/group_by_conflicts__noop_with_manual_group_by.snap
---
source: crates/validation/tests/group_by_conflicts.rs
expression: "(selections, errors)"
---
(
    [
        (
            [
                FieldSelection {
                    keys: [
                        "f_one",
                    ],
                    values: [
                        "f_two",
                    ],
                    document: "",
                    field_config_json_map: {},
                },
            ],
            Some(
                MaterializationDef {
                    source: None,
                    target_naming: None,
                    on_incompatible_schema_change: Abort,
                    endpoint: Connector(
                        ConnectorConfig {
                            image: "an/image:test",
                            config: RawValue(
                                {},
                            ),
                        },
                    ),
                    secrets: {},
                    vmm: false,
                    egress: None,
                    bindings: [
                        MaterializationBinding {
                            resource: RawValue(
                                {"_meta":{"path":["a"]},"table":"a"},
                            ),
                            source: Collection(
                                Collection(
                                    "the/collection",
                                ),
                            ),
                            disable: false,
                            priority: 0,
                            fields: MaterializationFields {
                                group_by: [
                                    Field(
                                        "f_one",
                                    ),
                                ],
                                require: {},
                                exclude: [],
                                recommended: Usize(
                                    1,
                                ),
                            },
                            backfill: 0,
                            on_incompatible_schema_change: None,
                        },
                    ],
                    shards: ShardTemplate {
                        disable: false,
                        min_txn_duration: None,
                        max_txn_duration: None,
                        hot_standbys: None,
                        ring_buffer_size: None,
                        read_channel_size: None,
                        shuffle_disk_limit: None,
                        log_level: None,
                        flags: {},
                    },
                    expect_pub_id: None,
                    triggers: None,
                    sync_schedule: None,
                    delete: false,
                    reset: false,
                },
            ),
            [],
        ),
    ],
    [],
)
